<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Key used to access the player's name, returned as an Intent from GameActivity upon completion (gameover). -->
    <string name="playername_key" translatable="false">org.blockinger2.game.activities.playername</string>

    <!-- Key used to access the player's score, returned as an Intent from GameActivity upon completion (gameover). -->
    <string name="score_key" translatable="false">org.blockinger2.game.activities.score</string>

    <string name="app_name" translatable="false">Blockinger</string>
    <string name="app_codename" translatable="false">blockinger2</string>

    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="new_game">New Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="exit">Exit</string>
    <string name="pause">Pause</string>
    <string name="player_name_input_field_hint">Choose your player name</string>
    <string name="highscores">Highscores</string>

    <string name="dialog_start_level_title">Starting Level</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>

    <string name="score">Score</string>
    <string name="level">Level</string>
    <string name="time">Time</string>
    <string name="apm">APM</string>
    <string name="fps">FPS</string>

    <string name="game_over">Game Over</string>

    <string name="anonymous">Anonymous</string>
    <string name="score_label">Score:</string>
    <string name="time_label">Time:</string>
    <string name="apm_label">Total APM:</string>

    <!-- Preference Strings -->
    <string name="pref_phantom_summary">Shows the drop location of the active piece</string>
    <string name="pref_phantom_title">Phantom</string>

    <string name="pref_show_fps_summary">The current Frames per Second will be shown below "APM"</string>
    <string name="pref_show_fps_title">Show FPS</string>

    <string name="pref_popup_summary">For successful line clears</string>
    <string name="pref_popup_title">Pop-Up Text</string>

    <string name="pref_sound_volume_title">Effects Volume</string>
    <string name="pref_sound_volume_summary">The volume of the sound and event effects during the game</string>

    <string name="pref_music_volume_title">Music Volume</string>
    <string name="pref_music_volume_summary">The volume of the music during the game</string>

    <string name="pref_vibration_button_title">Button Vibration</string>
    <string name="pref_vibration_button_summary">Vibrates shortly when pressing the game buttons</string>

    <string name="pref_vibration_events_title">Event Vibration</string>
    <string name="pref_vibration_events_summary">Vibrates on important game events</string>

    <string name="pref_button_sound_summary">Provides auditory feedback when pressing the game buttons</string>
    <string name="pref_button_sound_title">Button Sound</string>

    <string name="pref_button_vibration_duration_summary">Increase this time to compensate for the delay of your phone\'s vibrator. The duration of button vibrations should be adjusted to be just barely noticeable.\nTime in milliseconds</string>
    <string name="pref_button_vibration_duration_title">Button Vibration Duration</string>
    <string name="pref_button_vibration_duration_default">15</string>

    <string name="pref_horizontal_acceleration_summary">Short delay after the initial move. Useful for beginners</string>
    <string name="pref_horizontal_acceleration_title">Horizontal Acceleration</string>

    <string name="pref_soft_drop_acceleration_summary">Short delay after the initial move. Useful for beginners</string>
    <string name="pref_soft_drop_acceleration_title">Soft Drop Acceleration</string>

    <string name="pref_left_handed_mode_summary">Swap the position of buttons to suit left handed players</string>
    <string name="pref_left_handed_mode_title">Left handed mode</string>

    <string name="pref_version_summary">2.0.0\nTouch here to view the public repository of this project</string>
    <string name="pref_version_title">Version</string>
    <string name="repository_url" translatable="false">https://github.com/tasioleiva/Blockinger2</string>

    <string name="pref_license_summary">Blockinger is free software: licensed under the GNU General Public License (GPLv3) as published by the Free Software Foundation.\nTouch here to view this license online</string>
    <string name="pref_license_title">License Information</string>
    <string name="license_url" translatable="false">http://www.gnu.org/licenses/gpl-3.0</string>

    <string name="pref_license_music_summary">\"lemmings in love (karaoke)\" and \"sad robot (karaoke)\" by Pornophonique. Licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Germany license (CC BY-NC-SA 3.0 DE).\nTouch here to open the artist\'s website</string>
    <string name="pref_license_music_title">Music Attribution</string>
    <string name="music_url" translatable="false">http://www.pornophonique.de</string>

    <string name="pref_maintainer_summary">Tasio Leiva\nTouch here to contact the maintainer for suggestions, feedback or anything related to this project</string>
    <string name="pref_maintainer_title">Maintainer</string>
    <string name="maintainer_email" translatable="false">contact@tasioleiva.com</string>

    <string name="pref_author_summary">Simon Willeke\nTouch here to visit the original repository before it was forked</string>
    <string name="pref_author_title">Author</string>
    <string name="author_url" translatable="false">https://github.com/vocollapse/Blockinger</string>

    <string name="pref_category_sound">SOUND</string>
    <string name="pref_category_vibration">VIBRATION</string>
    <string name="pref_category_layout">LAYOUT</string>

    <!-- Help Menu Strings -->
    <string name="pref_help_scoring_title">Scoring</string>
    <string name="pref_help_scoring_summary">How does the scoring work?</string>
    <string name="pref_help_scoring_message">Basic points per cleared line are:\n100 points for 1 line,\n300 points for 2 lines,\n500 points for 3 lines,\n800 points for 4 lines (called \"Tetris\").\n\nScoring consecutive Tetrises provides 400 bonus points per Tetris.\nAdditionally the player receives a bonus score for using Soft and Hard Drops. Soft Drops award 1 point per dropped line, while Hard Drops award 2 points per dropped line.</string>

    <string name="pref_help_levels_title">Levels</string>
    <string name="pref_help_levels_summary">What do levels mean?</string>
    <string name="pref_help_levels_message">Levels are a measurement of difficulty.\nThe speed at which pieces automatically drop down increases by 10% per level.\nThe current level increases after clearing 10 additional lines.</string>

    <string name="pref_help_vibration_title">Vibration</string>
    <string name="pref_help_vibration_summary">How to achieve an optimal haptic feedback with vibration.</string>
    <string name="pref_help_vibration_message">There are some problems with the vibration functionality that can occur on a few devices.\nAlso most tablet devices don\'t support Vibration at all.\nIf your device does support vibration but you don\'t notice the button vibrations, you can increase the vibration duration. This setting is called \"Button Vibration Duration\" and can be found under advanced settings.\nThe duration of button vibrations should be adjusted to be just barely noticeable.</string>

    <string name="pref_help_apm_title">APM</string>
    <string name="pref_help_apm_summary">What does APM mean?</string>
    <string name="pref_help_apm_message">APM means \"Actions Per Minute\".\nThis is a measurement of the player\'s finger speed.</string>

    <string name="pref_help_fps_title">FPS</string>
    <string name="pref_help_fps_summary">What does FPS mean? What is it useful for?</string>
    <string name="pref_help_fps_message">FPS means \"Frames Per Second\".\nThis measures the frequency of display updates. Low FPS can be notices by slow reactions from the game and choppy displaying. High FPS on the other hand consume more power. A good trade-off between display smoothness and power consumption can be achieved between 25 and 35 FPS.\nFPS can be limited in advanced settings.</string>

    <string name="pref_help_randomizer_title">Randomizer</string>
    <string name="pref_help_randomizer_summary">What is the difference between the two randomizer modes? (advanced settings)</string>
    <string name="pref_help_randomizer_message">7-Bag-Randomization:\nGenerates randomly permutated sequences of all 7 pieces. This means, that the player can never encounter 3 identical pieces in a row.\n\nPlain Random:\nThe next piece will be independently generated at random.</string>

    <string name="pref_help_resumability_title">Resumability</string>
    <string name="pref_help_resumability_summary">Under which conditions is an interrupted game resumable?</string>
    <string name="pref_help_resumability_message">The game is resumable from the main screen, if the \"Pause\" button or the native android \"Back\" button was hit.\nThe game is also resumable, if the player switches to another application or the home screen and doesn\'t exit Blockinger.\nThe game will not be resumable, if the \"Exit\" menu entry was hit from the main screen.</string>

    <string name="button_hard_drop_description">Hard drop button</string>
    <string name="button_left_description">Left move button</string>
    <string name="button_right_description">Right move button</string>
    <string name="button_rotate_left_description">Rotate left button</string>
    <string name="button_rotate_right_description">Rotate right button</string>
    <string name="button_soft_drop_description">Soft drop button</string>

</resources>
