<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="pref_help_scoring"
        android:summary="@string/pref_help_scoring_summary"
        android:title="@string/pref_help_scoring_title" />

    <Preference
        android:key="pref_help_levels"
        android:summary="@string/pref_help_levels_summary"
        android:title="@string/pref_help_levels_title" />

    <Preference
        android:key="pref_help_vibration"
        android:summary="@string/pref_help_vibration_summary"
        android:title="@string/pref_help_vibration_title" />

    <Preference
        android:key="pref_help_apm"
        android:summary="@string/pref_help_apm_summary"
        android:title="@string/pref_help_apm_title" />

    <Preference
        android:key="pref_help_fps"
        android:summary="@string/pref_help_fps_summary"
        android:title="@string/pref_help_fps_title" />

    <Preference
        android:key="pref_help_randomizer"
        android:summary="@string/pref_help_randomizer_summary"
        android:title="@string/pref_help_randomizer_title" />

    <Preference
        android:key="pref_help_resumability"
        android:summary="@string/pref_help_resumability_summary"
        android:title="@string/pref_help_resumability_title" />

</PreferenceScreen>
