<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="end"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/highscores"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/activity_main_listview_highscores"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/highscores" />

    <EditText
        android:id="@+id/activity_main_edittext_player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/player_name_input_field_hint"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/activity_main_button_resume_game"
            style="@android:style/Widget.ImageWell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/resume_game"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/holo_grey"
            android:textColorHint="@color/holo_grey" />

        <Button
            android:id="@+id/activity_main_button_new_game"
            style="@android:style/Widget.ImageWell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_game"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/square_error"
            android:textColorHint="@color/holo_grey" />

    </LinearLayout>

</LinearLayout>
